<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.butrym.wojciech.traserlaserowyappaccelmain.MainActivity">

    <TextView
        android:id="@+id/x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xeq" />

    <TextView
        android:id="@+id/y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/x"
        android:layout_marginTop="20dp"
        android:text="@string/yeq"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/xval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/x"
        android:text="@string/dash"
        android:layout_toRightOf="@+id/x" />

    <TextView
        android:id="@+id/yval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/y"
        android:layout_toEndOf="@+id/x"
        android:text="@string/dash"
        android:layout_toRightOf="@+id/x" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/y"
        android:layout_marginTop="26dp"
        android:checked="false"
        android:text=""
        android:textColor="@android:color/black"
        android:textOff="@string/togoff"
        android:textOn="@string/togon"
        android:layout_alignParentLeft="true"
        tools:targetApi="m" />

    <Button
        android:id="@+id/arduino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:text="@string/connard"
        android:layout_below="@+id/toggleButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
    android:id="@+id/kalibracja"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/kalibracja"
    android:layout_marginTop="45dp"
    android:layout_below="@+id/arduino"
    android:layout_alignLeft="@+id/arduino"
    android:layout_alignStart="@+id/arduino" />

    <Button
        android:id="@+id/kalibracjareset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/czy_kalibracj"
        android:layout_alignBaseline="@+id/kalibracja"
        android:layout_alignBottom="@+id/kalibracja"
        android:layout_toRightOf="@+id/toggleButton"
        android:layout_toEndOf="@+id/toggleButton" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connstat"
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/kalibracja"
        android:layout_toLeftOf="@+id/kalibracjareset"
        android:layout_toStartOf="@+id/kalibracjareset" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/connstatard"
        android:textAlignment="center"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_marginStart="41dp"
        android:layout_toEndOf="@+id/textView3"
        android:text="@string/dot"
        android:layout_marginLeft="41dp"
        android:layout_toRightOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignStart="@+id/textView4"
        android:text="@string/dot"
        android:layout_alignLeft="@+id/textView4" />
</RelativeLayout>

